--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
   example:
     runs-on: ubuntu-latest
     steps:
-    - uses: jmatsu/detect-issue-comment-to-pr-filter@master
+    - uses: ./
       id: filter
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
